--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.2.8",
     "@nextui-org/image": "^2.2.3",
     "@nextui-org/navbar": "^2.2.5",
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "next": "15.1.0",
@@ -22,6 +24,7 @@
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
